fix color contrast issue

--- a/client/jetbrains/webview/src/search/input/JetBrainsSearchBox.module.scss
+++ b/client/jetbrains/webview/src/search/input/JetBrainsSearchBox.module.scss
@@ -209,9 +209,10 @@
 
                     &[aria-selected],
                     &:focus {
-                        background-color: var(--dropdown-link-active-bg);
+                        background-color: var(--dropdown-link-active-bg) !important;
 
                         &:not(:hover) {
+                            :global(.cm-completionLabel),
                             :global(.cm-completionMatchedText) {
                                 color: var(--light-text);
                             }
